trunk/NewArchive/41b0a006edf3973211d7d54d607092f0-542192d2d8aca3c820c7acc656fa0c68/output
+ g++ -std=c++11 main.cpp
main.cpp: In function ‘int main()’:
main.cpp:32:18: error: ‘aliasf’ was not declared in this scope
     (((cfoo.b)->*aliasf))(5);
                  ^
